relithation using while

--- a/3-modul/Задача/guess-game.html
+++ b/3-modul/Задача/guess-game.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<script src="guess-game-controller.js"></script>    
+<!-- <script src="./guess-game-controller-recursion.js"></script> -->
+<script src="./guess-game-controller.js"></script>
 <title>Guess game</title>
 </head>
 <body>
